@@ -6,6 +6,7 @@
  - gradle : upgrade to gradle for Android plugin 4.1.3
  - android : use buildtools 30.0.3
  - issue #194 : build against Android SDK 11.0 (API 30)
+ - disable javadoc generation and upload
 
  v0.8 (released on 03Jan2022)
  - issue #183 : add fastlane metadata
